src/main/java/com/example/querydsl/error/common/type/shop/category/CategoryException.java
package com.example.querydsl.error.common.type.shop.category;

public class CategoryException extends Exception {
    public CategoryException(String error) {
        super(error);
    }
}
